
set(Core_HDR_FILES
    Source/Core/Clock.h
    Source/Core/ComputeProperty.h
    Source/Core/ContextInstancerDefault.h
    Source/Core/DataController.h
    Source/Core/DataControllerDefault.h
    Source/Core/DataExpression.h
    Source/Core/DataModel.h
    Source/Core/DataView.h
    Source/Core/DataViewDefault.h
    Source/Core/DecoratorGradient.h
    Source/Core/DecoratorNinePatch.h
    Source/Core/DecoratorShader.h
    Source/Core/DecoratorTiled.h
    Source/Core/DecoratorTiledBox.h
    Source/Core/DecoratorTiledHorizontal.h
    Source/Core/DecoratorTiledImage.h
    Source/Core/DecoratorTiledVertical.h
    Source/Core/DocumentHeader.h
    Source/Core/ElementAnimation.h
    Source/Core/ElementBackgroundBorder.h
    Source/Core/ElementDefinition.h
    Source/Core/ElementEffects.h
    Source/Core/ElementHandle.h
    Source/Core/Elements/ElementImage.h
    Source/Core/Elements/ElementLabel.h
    Source/Core/Elements/ElementTextSelection.h
    Source/Core/Elements/InputType.h
    Source/Core/Elements/InputTypeButton.h
    Source/Core/Elements/InputTypeCheckbox.h
    Source/Core/Elements/InputTypeRadio.h
    Source/Core/Elements/InputTypeRange.h
    Source/Core/Elements/InputTypeSubmit.h
    Source/Core/Elements/InputTypeText.h
    Source/Core/Elements/WidgetDropDown.h
    Source/Core/Elements/WidgetSlider.h
    Source/Core/Elements/WidgetTextInput.h
    Source/Core/Elements/WidgetTextInputMultiLine.h
    Source/Core/Elements/WidgetTextInputSingleLine.h
    Source/Core/Elements/WidgetTextInputSingleLinePassword.h
    Source/Core/Elements/XMLNodeHandlerSelect.h
    Source/Core/Elements/XMLNodeHandlerTabSet.h
    Source/Core/Elements/XMLNodeHandlerTextArea.h
    Source/Core/ElementStyle.h
    Source/Core/EventDispatcher.h
    Source/Core/EventInstancerDefault.h
    Source/Core/EventSpecification.h
    Source/Core/FileInterfaceDefault.h
    Source/Core/FilterBasic.h
    Source/Core/FilterBlur.h
    Source/Core/FilterDropShadow.h
    Source/Core/FontEffectBlur.h
    Source/Core/FontEffectGlow.h
    Source/Core/FontEffectOutline.h
    Source/Core/FontEffectShadow.h
    Source/Core/GeometryBackgroundBorder.h
    Source/Core/GeometryBoxShadow.h
    Source/Core/IdNameMap.h
    Source/Core/Layout/BlockContainer.h
    Source/Core/Layout/BlockFormattingContext.h
    Source/Core/Layout/ContainerBox.h
    Source/Core/Layout/FlexFormattingContext.h
    Source/Core/Layout/FloatedBoxSpace.h
    Source/Core/Layout/FormattingContext.h
    Source/Core/Layout/InlineBox.h
    Source/Core/Layout/InlineContainer.h
    Source/Core/Layout/InlineLevelBox.h
    Source/Core/Layout/InlineTypes.h
    Source/Core/Layout/LayoutBox.h
    Source/Core/Layout/LayoutDetails.h
    Source/Core/Layout/LayoutEngine.h
    Source/Core/Layout/LayoutPools.h
    Source/Core/Layout/LineBox.h
    Source/Core/Layout/ReplacedFormattingContext.h
    Source/Core/Layout/TableFormattingContext.h
    Source/Core/Layout/TableFormattingDetails.h
    Source/Core/LogDefault.h
    Source/Core/Memory.h
    Source/Core/PluginRegistry.h
    Source/Core/Pool.h
    Source/Core/precompiled.h
    Source/Core/PropertiesIterator.h
    Source/Core/PropertyParserAnimation.h
    Source/Core/PropertyParserBoxShadow.h
    Source/Core/PropertyParserColorStopList.h
    Source/Core/PropertyParserColour.h
    Source/Core/PropertyParserDecorator.h
    Source/Core/PropertyParserFilter.h
    Source/Core/PropertyParserFontEffect.h
    Source/Core/PropertyParserKeyword.h
    Source/Core/PropertyParserNumber.h
    Source/Core/PropertyParserRatio.h
    Source/Core/PropertyParserString.h
    Source/Core/PropertyParserTransform.h
    Source/Core/PropertyShorthandDefinition.h
    Source/Core/RenderManagerAccess.h
    Source/Core/ScrollController.h
    Source/Core/StreamFile.h
    Source/Core/StyleSheetFactory.h
    Source/Core/StyleSheetNode.h
    Source/Core/StyleSheetParser.h
    Source/Core/StyleSheetSelector.h
    Source/Core/Template.h
    Source/Core/TemplateCache.h
    Source/Core/TextureDatabase.h
    Source/Core/TextureLayout.h
    Source/Core/TextureLayoutRectangle.h
    Source/Core/TextureLayoutRow.h
    Source/Core/TextureLayoutTexture.h
    Source/Core/TransformState.h
    Source/Core/TransformUtilities.h
    Source/Core/WidgetScroll.h
    Source/Core/XMLNodeHandlerBody.h
    Source/Core/XMLNodeHandlerDefault.h
    Source/Core/XMLNodeHandlerHead.h
    Source/Core/XMLNodeHandlerTemplate.h
    Source/Core/XMLParseTools.h
)

set(MASTER_Core_PUB_HDR_FILES
    Include/RmlUi/Core.h
)

set(Core_PUB_HDR_FILES
    Include/RmlUi/Config/Config.h
    Include/RmlUi/Core/Animation.h
    Include/RmlUi/Core/BaseXMLParser.h
    Include/RmlUi/Core/Box.h
    Include/RmlUi/Core/CallbackTexture.h
    Include/RmlUi/Core/Colour.h
    Include/RmlUi/Core/Colour.inl
    Include/RmlUi/Core/CompiledFilterShader.h
    Include/RmlUi/Core/ComputedValues.h
    Include/RmlUi/Core/Containers/itlib/flat_map.hpp
    Include/RmlUi/Core/Containers/itlib/flat_set.hpp
    Include/RmlUi/Core/Containers/robin_hood.h
    Include/RmlUi/Core/Context.h
    Include/RmlUi/Core/ContextInstancer.h
    Include/RmlUi/Core/ConvolutionFilter.h
    Include/RmlUi/Core/Core.h
    Include/RmlUi/Core/DataModelHandle.h
    Include/RmlUi/Core/DataStructHandle.h
    Include/RmlUi/Core/DataTypeRegister.h
    Include/RmlUi/Core/DataTypes.h
    Include/RmlUi/Core/DataVariable.h
    Include/RmlUi/Core/Debug.h
    Include/RmlUi/Core/DecorationTypes.h
    Include/RmlUi/Core/Decorator.h
    Include/RmlUi/Core/Dictionary.h
    Include/RmlUi/Core/EffectSpecification.h
    Include/RmlUi/Core/Element.h
    Include/RmlUi/Core/Element.inl
    Include/RmlUi/Core/ElementDocument.h
    Include/RmlUi/Core/ElementInstancer.h
    Include/RmlUi/Core/Elements/ElementForm.h
    Include/RmlUi/Core/Elements/ElementFormControl.h
    Include/RmlUi/Core/Elements/ElementFormControlInput.h
    Include/RmlUi/Core/Elements/ElementFormControlSelect.h
    Include/RmlUi/Core/Elements/ElementFormControlTextArea.h
    Include/RmlUi/Core/Elements/ElementProgress.h
    Include/RmlUi/Core/Elements/ElementTabSet.h
    Include/RmlUi/Core/ElementScroll.h
    Include/RmlUi/Core/ElementText.h
    Include/RmlUi/Core/ElementUtilities.h
    Include/RmlUi/Core/Event.h
    Include/RmlUi/Core/EventInstancer.h
    Include/RmlUi/Core/EventListener.h
    Include/RmlUi/Core/EventListenerInstancer.h
    Include/RmlUi/Core/Factory.h
    Include/RmlUi/Core/FileInterface.h
    Include/RmlUi/Core/Filter.h
    Include/RmlUi/Core/FontEffect.h
    Include/RmlUi/Core/FontEffectInstancer.h
    Include/RmlUi/Core/FontEngineInterface.h
    Include/RmlUi/Core/FontGlyph.h
    Include/RmlUi/Core/FontMetrics.h
    Include/RmlUi/Core/Geometry.h
    Include/RmlUi/Core/Header.h
    Include/RmlUi/Core/ID.h
    Include/RmlUi/Core/Input.h
    Include/RmlUi/Core/Log.h
    Include/RmlUi/Core/Math.h
    Include/RmlUi/Core/Matrix4.h
    Include/RmlUi/Core/Matrix4.inl
    Include/RmlUi/Core/Mesh.h
    Include/RmlUi/Core/MeshUtilities.h
    Include/RmlUi/Core/NumericValue.h
    Include/RmlUi/Core/ObserverPtr.h
    Include/RmlUi/Core/Platform.h
    Include/RmlUi/Core/Plugin.h
    Include/RmlUi/Core/Profiling.h
    Include/RmlUi/Core/PropertiesIteratorView.h
    Include/RmlUi/Core/Property.h
    Include/RmlUi/Core/PropertyDefinition.h
    Include/RmlUi/Core/PropertyDictionary.h
    Include/RmlUi/Core/PropertyIdSet.h
    Include/RmlUi/Core/PropertyParser.h
    Include/RmlUi/Core/PropertySpecification.h
    Include/RmlUi/Core/Rectangle.h
    Include/RmlUi/Core/RenderInterface.h
    Include/RmlUi/Core/RenderInterfaceCompatibility.h
    Include/RmlUi/Core/RenderManager.h
    Include/RmlUi/Core/ScriptInterface.h
    Include/RmlUi/Core/ScrollTypes.h
    Include/RmlUi/Core/Span.h
    Include/RmlUi/Core/Spritesheet.h
    Include/RmlUi/Core/StableVector.h
    Include/RmlUi/Core/Stream.h
    Include/RmlUi/Core/StreamMemory.h
    Include/RmlUi/Core/StringUtilities.h
    Include/RmlUi/Core/StyleSheet.h
    Include/RmlUi/Core/StyleSheetContainer.h
    Include/RmlUi/Core/StyleSheetSpecification.h
    Include/RmlUi/Core/StyleSheetTypes.h
    Include/RmlUi/Core/StyleTypes.h
    Include/RmlUi/Core/SystemInterface.h
    Include/RmlUi/Core/Texture.h
    Include/RmlUi/Core/TextShapingContext.h
    Include/RmlUi/Core/Traits.h
    Include/RmlUi/Core/Transform.h
    Include/RmlUi/Core/TransformPrimitive.h
    Include/RmlUi/Core/Tween.h
    Include/RmlUi/Core/TypeConverter.h
    Include/RmlUi/Core/TypeConverter.inl
    Include/RmlUi/Core/Types.h
    Include/RmlUi/Core/UniqueRenderResource.h
    Include/RmlUi/Core/Unit.h
    Include/RmlUi/Core/URL.h
    Include/RmlUi/Core/Utilities.h
    Include/RmlUi/Core/Variant.h
    Include/RmlUi/Core/Variant.inl
    Include/RmlUi/Core/Vector2.h
    Include/RmlUi/Core/Vector2.inl
    Include/RmlUi/Core/Vector3.h
    Include/RmlUi/Core/Vector3.inl
    Include/RmlUi/Core/Vector4.h
    Include/RmlUi/Core/Vector4.inl
    Include/RmlUi/Core/Vertex.h
    Include/RmlUi/Core/XMLNodeHandler.h
    Include/RmlUi/Core/XMLParser.h
)

set(Core_SRC_FILES
    Source/Core/BaseXMLParser.cpp
    Source/Core/Box.cpp
    Source/Core/CallbackTexture.cpp
    Source/Core/Clock.cpp
    Source/Core/CompiledFilterShader.cpp
    Source/Core/ComputedValues.cpp
    Source/Core/ComputeProperty.cpp
    Source/Core/Context.cpp
    Source/Core/ContextInstancer.cpp
    Source/Core/ContextInstancerDefault.cpp
    Source/Core/ConvolutionFilter.cpp
    Source/Core/Core.cpp
    Source/Core/DataController.cpp
    Source/Core/DataControllerDefault.cpp
    Source/Core/DataExpression.cpp
    Source/Core/DataModel.cpp
    Source/Core/DataModelHandle.cpp
    Source/Core/DataTypeRegister.cpp
    Source/Core/DataVariable.cpp
    Source/Core/DataView.cpp
    Source/Core/DataViewDefault.cpp
    Source/Core/Decorator.cpp
    Source/Core/DecoratorGradient.cpp
    Source/Core/DecoratorNinePatch.cpp
    Source/Core/DecoratorShader.cpp
    Source/Core/DecoratorTiled.cpp
    Source/Core/DecoratorTiledBox.cpp
    Source/Core/DecoratorTiledHorizontal.cpp
    Source/Core/DecoratorTiledImage.cpp
    Source/Core/DecoratorTiledVertical.cpp
    Source/Core/DocumentHeader.cpp
    Source/Core/EffectSpecification.cpp
    Source/Core/Element.cpp
    Source/Core/ElementAnimation.cpp
    Source/Core/ElementBackgroundBorder.cpp
    Source/Core/ElementDefinition.cpp
    Source/Core/ElementDocument.cpp
    Source/Core/ElementEffects.cpp
    Source/Core/ElementHandle.cpp
    Source/Core/ElementInstancer.cpp
    Source/Core/Elements/ElementForm.cpp
    Source/Core/Elements/ElementFormControl.cpp
    Source/Core/Elements/ElementFormControlInput.cpp
    Source/Core/Elements/ElementFormControlSelect.cpp
    Source/Core/Elements/ElementFormControlTextArea.cpp
    Source/Core/Elements/ElementImage.cpp
    Source/Core/Elements/ElementLabel.cpp
    Source/Core/Elements/ElementProgress.cpp
    Source/Core/Elements/ElementTabSet.cpp
    Source/Core/Elements/ElementTextSelection.cpp
    Source/Core/Elements/InputType.cpp
    Source/Core/Elements/InputTypeButton.cpp
    Source/Core/Elements/InputTypeCheckbox.cpp
    Source/Core/Elements/InputTypeRadio.cpp
    Source/Core/Elements/InputTypeRange.cpp
    Source/Core/Elements/InputTypeSubmit.cpp
    Source/Core/Elements/InputTypeText.cpp
    Source/Core/Elements/WidgetDropDown.cpp
    Source/Core/Elements/WidgetSlider.cpp
    Source/Core/Elements/WidgetTextInput.cpp
    Source/Core/Elements/WidgetTextInputMultiLine.cpp
    Source/Core/Elements/WidgetTextInputSingleLine.cpp
    Source/Core/Elements/WidgetTextInputSingleLinePassword.cpp
    Source/Core/Elements/XMLNodeHandlerSelect.cpp
    Source/Core/Elements/XMLNodeHandlerTabSet.cpp
    Source/Core/Elements/XMLNodeHandlerTextArea.cpp
    Source/Core/ElementScroll.cpp
    Source/Core/ElementStyle.cpp
    Source/Core/ElementText.cpp
    Source/Core/ElementUtilities.cpp
    Source/Core/Event.cpp
    Source/Core/EventDispatcher.cpp
    Source/Core/EventInstancer.cpp
    Source/Core/EventInstancerDefault.cpp
    Source/Core/EventListenerInstancer.cpp
    Source/Core/EventSpecification.cpp
    Source/Core/Factory.cpp
    Source/Core/FileInterface.cpp
    Source/Core/FileInterfaceDefault.cpp
    Source/Core/Filter.cpp
    Source/Core/FilterBasic.cpp
    Source/Core/FilterBlur.cpp
    Source/Core/FilterDropShadow.cpp
    Source/Core/FontEffect.cpp
    Source/Core/FontEffectBlur.cpp
    Source/Core/FontEffectGlow.cpp
    Source/Core/FontEffectInstancer.cpp
    Source/Core/FontEffectOutline.cpp
    Source/Core/FontEffectShadow.cpp
    Source/Core/FontEngineInterface.cpp
    Source/Core/Geometry.cpp
    Source/Core/GeometryBackgroundBorder.cpp
    Source/Core/GeometryBoxShadow.cpp
    Source/Core/Layout/BlockContainer.cpp
    Source/Core/Layout/BlockFormattingContext.cpp
    Source/Core/Layout/ContainerBox.cpp
    Source/Core/Layout/FlexFormattingContext.cpp
    Source/Core/Layout/FloatedBoxSpace.cpp
    Source/Core/Layout/FormattingContext.cpp
    Source/Core/Layout/InlineBox.cpp
    Source/Core/Layout/InlineContainer.cpp
    Source/Core/Layout/InlineLevelBox.cpp
    Source/Core/Layout/LayoutBox.cpp
    Source/Core/Layout/LayoutDetails.cpp
    Source/Core/Layout/LayoutEngine.cpp
    Source/Core/Layout/LayoutPools.cpp
    Source/Core/Layout/LineBox.cpp
    Source/Core/Layout/ReplacedFormattingContext.cpp
    Source/Core/Layout/TableFormattingContext.cpp
    Source/Core/Layout/TableFormattingDetails.cpp
    Source/Core/Log.cpp
    Source/Core/LogDefault.cpp
    Source/Core/Math.cpp
    Source/Core/Memory.cpp
    Source/Core/MeshUtilities.cpp
    Source/Core/ObserverPtr.cpp
    Source/Core/Plugin.cpp
    Source/Core/PluginRegistry.cpp
    Source/Core/Profiling.cpp
    Source/Core/PropertiesIteratorView.cpp
    Source/Core/Property.cpp
    Source/Core/PropertyDefinition.cpp
    Source/Core/PropertyDictionary.cpp
    Source/Core/PropertyParserAnimation.cpp
    Source/Core/PropertyParserBoxShadow.cpp
    Source/Core/PropertyParserColorStopList.cpp
    Source/Core/PropertyParserColour.cpp
    Source/Core/PropertyParserDecorator.cpp
    Source/Core/PropertyParserFilter.cpp
    Source/Core/PropertyParserFontEffect.cpp
    Source/Core/PropertyParserKeyword.cpp
    Source/Core/PropertyParserNumber.cpp
    Source/Core/PropertyParserRatio.cpp
    Source/Core/PropertyParserString.cpp
    Source/Core/PropertyParserTransform.cpp
    Source/Core/PropertySpecification.cpp
    Source/Core/RenderInterface.cpp
    Source/Core/RenderInterfaceCompatibility.cpp
    Source/Core/RenderManager.cpp
    Source/Core/RenderManagerAccess.cpp
    Source/Core/ScrollController.cpp
    Source/Core/Spritesheet.cpp
    Source/Core/Stream.cpp
    Source/Core/StreamFile.cpp
    Source/Core/StreamMemory.cpp
    Source/Core/StringUtilities.cpp
    Source/Core/StyleSheet.cpp
    Source/Core/StyleSheetContainer.cpp
    Source/Core/StyleSheetFactory.cpp
    Source/Core/StyleSheetNode.cpp
    Source/Core/StyleSheetParser.cpp
    Source/Core/StyleSheetSelector.cpp
    Source/Core/StyleSheetSpecification.cpp
    Source/Core/SystemInterface.cpp
    Source/Core/Template.cpp
    Source/Core/TemplateCache.cpp
    Source/Core/Texture.cpp
    Source/Core/TextureDatabase.cpp
    Source/Core/TextureLayout.cpp
    Source/Core/TextureLayoutRectangle.cpp
    Source/Core/TextureLayoutRow.cpp
    Source/Core/TextureLayoutTexture.cpp
    Source/Core/Transform.cpp
    Source/Core/TransformPrimitive.cpp
    Source/Core/TransformState.cpp
    Source/Core/TransformUtilities.cpp
    Source/Core/Tween.cpp
    Source/Core/TypeConverter.cpp
    Source/Core/URL.cpp
    Source/Core/Variant.cpp
    Source/Core/WidgetScroll.cpp
    Source/Core/XMLNodeHandler.cpp
    Source/Core/XMLNodeHandlerBody.cpp
    Source/Core/XMLNodeHandlerDefault.cpp
    Source/Core/XMLNodeHandlerHead.cpp
    Source/Core/XMLNodeHandlerTemplate.cpp
    Source/Core/XMLParser.cpp
    Source/Core/XMLParseTools.cpp
)

set(Debugger_HDR_FILES
    Source/Debugger/BeaconSource.h
    Source/Debugger/CommonSource.h
    Source/Debugger/DebuggerPlugin.h
    Source/Debugger/DebuggerSystemInterface.h
    Source/Debugger/ElementContextHook.h
    Source/Debugger/ElementInfo.h
    Source/Debugger/ElementLog.h
    Source/Debugger/FontSource.h
    Source/Debugger/Geometry.h
    Source/Debugger/InfoSource.h
    Source/Debugger/LogSource.h
    Source/Debugger/MenuSource.h
)

set(MASTER_Debugger_PUB_HDR_FILES
    Include/RmlUi/Debugger.h
)

set(Debugger_PUB_HDR_FILES
    Include/RmlUi/Debugger/Debugger.h
    Include/RmlUi/Debugger/Header.h
)

set(Debugger_SRC_FILES
    Source/Debugger/Debugger.cpp
    Source/Debugger/DebuggerPlugin.cpp
    Source/Debugger/DebuggerSystemInterface.cpp
    Source/Debugger/ElementContextHook.cpp
    Source/Debugger/ElementInfo.cpp
    Source/Debugger/ElementLog.cpp
    Source/Debugger/Geometry.cpp
)

if(NOT NO_FONT_INTERFACE_DEFAULT)
    set(Core_HDR_FILES
        ${Core_HDR_FILES}
        Source/Core/FontEngineDefault/FontEngineInterfaceDefault.h
        Source/Core/FontEngineDefault/FontFace.h
        Source/Core/FontEngineDefault/FontFaceHandleDefault.h
        Source/Core/FontEngineDefault/FontFaceLayer.h
        Source/Core/FontEngineDefault/FontFamily.h
        Source/Core/FontEngineDefault/FontProvider.h
        Source/Core/FontEngineDefault/FontTypes.h
        Source/Core/FontEngineDefault/FreeTypeInterface.h
    )

    set(Core_SRC_FILES
        ${Core_SRC_FILES}
        Source/Core/FontEngineDefault/FontEngineInterfaceDefault.cpp
        Source/Core/FontEngineDefault/FontFace.cpp
        Source/Core/FontEngineDefault/FontFaceHandleDefault.cpp
        Source/Core/FontEngineDefault/FontFaceLayer.cpp
        Source/Core/FontEngineDefault/FontFamily.cpp
        Source/Core/FontEngineDefault/FontProvider.cpp
        Source/Core/FontEngineDefault/FreeTypeInterface.cpp
    )
endif()

set(Lua_HDR_FILES
    Source/Lua/Colourb.h
    Source/Lua/Colourf.h
    Source/Lua/Context.h
    Source/Lua/ContextDocumentsProxy.h
    Source/Lua/Document.h
    Source/Lua/Element.h
    Source/Lua/ElementAttributesProxy.h
    Source/Lua/ElementChildNodesProxy.h
    Source/Lua/ElementInstancer.h
    Source/Lua/Elements/As.h
    Source/Lua/Elements/ElementForm.h
    Source/Lua/Elements/ElementFormControl.h
    Source/Lua/Elements/ElementFormControlInput.h
    Source/Lua/Elements/ElementFormControlSelect.h
    Source/Lua/Elements/ElementFormControlTextArea.h
    Source/Lua/Elements/ElementTabSet.h
    Source/Lua/Elements/SelectOptionsProxy.h
    Source/Lua/ElementStyleProxy.h
    Source/Lua/ElementText.h
    Source/Lua/Event.h
    Source/Lua/EventParametersProxy.h
    Source/Lua/GlobalLuaFunctions.h
    Source/Lua/Log.h
    Source/Lua/LuaDataModel.h
    Source/Lua/LuaDocument.h
    Source/Lua/LuaDocumentElementInstancer.h
    Source/Lua/LuaElementInstancer.h
    Source/Lua/LuaEventListener.h
    Source/Lua/LuaEventListenerInstancer.h
    Source/Lua/LuaPlugin.h
    Source/Lua/Pairs.h
    Source/Lua/RmlUi.h
    Source/Lua/RmlUiContextsProxy.h
    Source/Lua/Vector2f.h
    Source/Lua/Vector2i.h
)

set(Lua_PUB_HDR_FILES
    Include/RmlUi/Lua/Header.h
    Include/RmlUi/Lua/IncludeLua.h
    Include/RmlUi/Lua/Interpreter.h
    Include/RmlUi/Lua/Lua.h
    Include/RmlUi/Lua/LuaType.h
    Include/RmlUi/Lua/Utilities.h
)

set(Lua_SRC_FILES
    Source/Lua/Colourb.cpp
    Source/Lua/Colourf.cpp
    Source/Lua/Context.cpp
    Source/Lua/ContextDocumentsProxy.cpp
    Source/Lua/Document.cpp
    Source/Lua/Element.cpp
    Source/Lua/ElementAttributesProxy.cpp
    Source/Lua/ElementChildNodesProxy.cpp
    Source/Lua/ElementInstancer.cpp
    Source/Lua/Elements/ElementForm.cpp
    Source/Lua/Elements/ElementFormControl.cpp
    Source/Lua/Elements/ElementFormControlInput.cpp
    Source/Lua/Elements/ElementFormControlSelect.cpp
    Source/Lua/Elements/ElementFormControlTextArea.cpp
    Source/Lua/Elements/ElementTabSet.cpp
    Source/Lua/Elements/SelectOptionsProxy.cpp
    Source/Lua/ElementStyleProxy.cpp
    Source/Lua/ElementText.cpp
    Source/Lua/Event.cpp
    Source/Lua/EventParametersProxy.cpp
    Source/Lua/GlobalLuaFunctions.cpp
    Source/Lua/Interpreter.cpp
    Source/Lua/Log.cpp
    Source/Lua/Lua.cpp
    Source/Lua/LuaDataModel.cpp
    Source/Lua/LuaDocument.cpp
    Source/Lua/LuaDocumentElementInstancer.cpp
    Source/Lua/LuaElementInstancer.cpp
    Source/Lua/LuaEventListener.cpp
    Source/Lua/LuaEventListenerInstancer.cpp
    Source/Lua/LuaPlugin.cpp
    Source/Lua/LuaType.cpp
    Source/Lua/RmlUi.cpp
    Source/Lua/RmlUiContextsProxy.cpp
    Source/Lua/Utilities.cpp
    Source/Lua/Vector2f.cpp
    Source/Lua/Vector2i.cpp
)

add_library(RmlCore ${Core_SRC_FILES})
target_link_libraries(RmlCore PRIVATE Freetype::Freetype)
target_include_directories(RmlCore PUBLIC ./Include)
target_compile_definitions(RmlCore PUBLIC -DRMLUI_STATIC_LIB)

add_library(RmlDebugger ${Debugger_SRC_FILES})
target_compile_definitions(RmlDebugger PUBLIC -DRMLUI_STATIC_LIB)

add_library(RmlLua ${Lua_SRC_FILES})
target_compile_definitions(RmlLua PUBLIC -DRMLUI_STATIC_LIB)
target_include_directories(RmlLua PRIVATE ${LUA_INCLUDE_DIR})
target_link_libraries(RmlLua PRIVATE RmlCore)


